Added a linear optimiser and feedback for students

--- a/flaskdeadline/saml/advanced_settings.json
+++ b/flaskdeadline/saml/advanced_settings.json
@@ -5,8 +5,8 @@
         "logoutRequestSigned": false,
         "logoutResponseSigned": false,
         "signMetadata": false,
-        "wantMessagesSigned": false,
-        "wantAssertionsSigned": false,
+        "wantMessagesSigned": true,
+        "wantAssertionsSigned": true,
         "wantNameId" : true,
         "wantNameIdEncrypted": false,
         "wantAssertionsEncrypted": false,
