--- a/flaskdeadline/requirements.txt
+++ b/flaskdeadline/requirements.txt
@@ -1,5 +1,4 @@
 attrs==21.4.0
-bcrypt==3.2.2
 blinker==1.4
 certifi==2021.10.8
 cffi==1.15.0
@@ -32,9 +31,11 @@ numpy==1.22.4
 oauthlib==3.2.0
 onelogin==2.0.3
 packaging==21.3
+pandas==1.4.2
 pluggy==1.0.0
 py==1.11.0
 pycparser==2.21
+pydot==1.4.2
 pyOpenSSL==22.0.0
 pyparsing==3.0.9
 pysaml2==4.9.0
@@ -51,5 +52,6 @@ validators==0.20.0
 Werkzeug==2.1.1
 WTForms==3.0.1
 WTForms-Components==0.10.5
+WTForms-Ext==0.5
 xmlsec==1.3.12
 zipp==3.8.0
